<resources>
    <string name="app_name">MMGPS</string>
    <string name="app_name_2">MMGPS</string>
    <string name="title_activity_maps">Map</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="user_id">UserID</string>
    <string name="password">Password</string>
    <string name="signin_continue">Sign In to Continue</string>

</resources>
